Fixed broken style of links

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -53,39 +53,43 @@ dl.glossary {
 
 /* Schrift von Code-Elementen im Text auf #E66D0D (Orange-Ton) setzen */
 code.docutils.literal.notranslate {
-  color: #E66D0D
+  color: #E66D0D;
 }
 
 /* Vorheriger Farbcode für den Mint-Ton: #B0C86F (zusätzlich vermerkte Alternative: #94C172)*/
 
 /* Schrift mit Farbe blau auf Farbe #9CB262 (Mint-Ton)  setzen  => rechte Navigationsbar*/
 a.reference.internal.nav-link:hover, a.reference.internal.nav-link.active {
-  color: #9CB262
+  color: #9CB262;
+}
+
+.toc-entry a.nav-link.active {
+  box-shadow: inset max(3px,.1875rem,.12em) 0 0 #9CB262;
 }
 
 /* Schrift mit Farbe blau auf Farbe #9CB262 (Mint-Ton)  setzen  => Haupttextbereich*/
 main.bd-content #main-content a,
-main.bd-content #main-content a:visited,
+main.bd-content #main-content a:visited:hover,
 main.bd-content #print-main-content a,
-main.bd-content #print-main-content a:visited {
- color:#9CB262
+main.bd-content #print-main-content a:visited:hover {
+ color:#9CB262;
 }
 
 /* Schrift mit Farbe blau auf Farbe #9CB262 (Mint-Ton)  setzen  => Links im Footer*/
-a, a:hover {
-  color: #9CB262
+a, a:hover, a:visited, a:visited:hover {
+  color: #9CB262;
 }
 
 /* Schrift mit Farbe blau auf Farbe #9CB262 (Mint-Ton)  setzen  => linke Navigationsbar*/
-#site-navigation nav ul.nav a:hover,
-#site-navigation nav ul.nav li.active>a,
-#site-navigation nav ul.nav li.active>a:hover {
- color:#9CB262
+nav.bd-links li > a:hover,
+nav.bd-links .current > a {
+ color:#9CB262;
+ box-shadow: inset max(3px,.1875rem,.12em) 0 0 #9CB262;
 }
 
 /* Schrift mit Farbe blau auf Farbe #9CB262 (Mint-Ton)  setzen  => vor-zurück-Navigation im unteren Bereich*/
 .prev-next-area a p.prev-next-title {
-  color: #9CB262;
+  color: #9CB262 !important;
   font-weight: 600;
   font-size: 1.1em;
 }
